--- a/form.html
+++ b/form.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <form action="index.php" method="post">
+        <input type="text" name="nombre" id="" value="Tec">
+        <input type="text" name="apellido" id="" value="Pachuca">
         <input type="submit" value="enviar peticion">
     </form>
     
 </body>
+
 </html>
